fixing status legend alignment

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1455,13 +1455,9 @@ body.ladies .site-title {
 }
 
 .status-legend.index-bar {
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-  width: 100vw;
-  max-width: 100vw;
+  margin: 1.5rem auto 0 auto;
+  width: 90%;
+  max-width: 1100px;
   box-sizing: border-box;
   text-align: center;
   background: rgba(0, 0, 0, 0.4);
